// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ButtonGroup /> > ButtonToggles story renders snapshot 1`] = `
<div
  class="css-13iras6-StyledBackgroundAppearanceWrapper-StyledBackgroundAppearanceWrapper et5j5k0"
>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
    role="group"
  >
    <button
      aria-label="Search"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary euuolxv0 et5j5k2 MuiButtonGroup-firstButton css-8ba2q6-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledButtonToggle"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeLarge css-hev6se-MuiButton-startIcon"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconSearchSmall"
            data-testid="IconSearchSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      aria-label="Copy"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary euuolxv0 et5j5k2 MuiButtonGroup-middleButton css-8ba2q6-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledButtonToggle"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeLarge css-hev6se-MuiButton-startIcon"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconCopySmall"
            data-testid="IconCopySmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      aria-label="Code"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary euuolxv0 et5j5k2 MuiButtonGroup-middleButton css-8ba2q6-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledButtonToggle"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeLarge css-hev6se-MuiButton-startIcon"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconCodeSmall"
            data-testid="IconCodeSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      aria-label="Cube"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary euuolxv0 et5j5k2 MuiButtonGroup-lastButton css-8ba2q6-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledButtonToggle"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeLarge css-hev6se-MuiButton-startIcon"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconCubeSmall"
            data-testid="IconCubeSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > Default story renders snapshot 1`] = `
<div
  class="css-13iras6-StyledBackgroundAppearanceWrapper-StyledBackgroundAppearanceWrapper et5j5k0"
>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
    role="group"
  >
    <button
      aria-label="Download"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconDownloadSmall"
            data-testid="IconDownloadSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-15tb2kd-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeLarge css-hev6se-MuiButton-startIcon"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconDownloadSmall"
            data-testid="IconDownloadSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        Label
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        Label
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > DisabledButtons story renders snapshot 1`] = `
<div
  class="css-13iras6-StyledBackgroundAppearanceWrapper-StyledBackgroundAppearanceWrapper et5j5k0"
>
  <div
    style="display: flex; flex-direction: column; gap: 12px;"
  >
    <div
      class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
      role="group"
    >
      <button
        aria-label="Download"
        class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconDownloadSmall"
              data-testid="IconDownloadSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Copy"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCopySmall"
              data-testid="IconCopySmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Cube"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCubeSmall"
              data-testid="IconCubeSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Github"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconGithubSmall"
              data-testid="IconGithubSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Edit"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconEditSmall"
              data-testid="IconEditSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
    </div>
    <div
      class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
      role="group"
    >
      <button
        aria-label="Download"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconDownloadSmall"
              data-testid="IconDownloadSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Copy"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCopySmall"
              data-testid="IconCopySmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Cube"
        class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCubeSmall"
              data-testid="IconCubeSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Github"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconGithubSmall"
              data-testid="IconGithubSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Edit"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconEditSmall"
              data-testid="IconEditSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
    </div>
    <div
      class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
      role="group"
    >
      <button
        aria-label="Download"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconDownloadSmall"
              data-testid="IconDownloadSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Copy"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCopySmall"
              data-testid="IconCopySmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Cube"
        class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCubeSmall"
              data-testid="IconCubeSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Github"
        class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconGithubSmall"
              data-testid="IconGithubSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Edit"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconEditSmall"
              data-testid="IconEditSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
    </div>
    <div
      class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
      role="group"
    >
      <button
        aria-label="Download"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconDownloadSmall"
              data-testid="IconDownloadSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Copy"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCopySmall"
              data-testid="IconCopySmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Cube"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconCubeSmall"
              data-testid="IconCubeSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Github"
        class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconGithubSmall"
              data-testid="IconGithubSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
      <button
        aria-label="Edit"
        class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconEditSmall"
              data-testid="IconEditSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
      </button>
    </div>
    <div
      style="display: flex; gap: 12px;"
    >
      <div
        class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-vertical MuiButtonGroup-colorPrimary e1jymmfx0 css-1idgnfl-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
        role="group"
      >
        <button
          aria-label="Download"
          class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconDownloadSmall"
                data-testid="IconDownloadSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Copy"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCopySmall"
                data-testid="IconCopySmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Cube"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCubeSmall"
                data-testid="IconCubeSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Github"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconGithubSmall"
                data-testid="IconGithubSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Edit"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconEditSmall"
                data-testid="IconEditSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-vertical MuiButtonGroup-colorPrimary e1jymmfx0 css-1idgnfl-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
        role="group"
      >
        <button
          aria-label="Download"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconDownloadSmall"
                data-testid="IconDownloadSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Copy"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCopySmall"
                data-testid="IconCopySmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Cube"
          class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCubeSmall"
                data-testid="IconCubeSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Github"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconGithubSmall"
                data-testid="IconGithubSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Edit"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconEditSmall"
                data-testid="IconEditSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-vertical MuiButtonGroup-colorPrimary e1jymmfx0 css-1idgnfl-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
        role="group"
      >
        <button
          aria-label="Download"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconDownloadSmall"
                data-testid="IconDownloadSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Copy"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCopySmall"
                data-testid="IconCopySmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Cube"
          class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCubeSmall"
                data-testid="IconCubeSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Github"
          class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconGithubSmall"
                data-testid="IconGithubSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Edit"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconEditSmall"
                data-testid="IconEditSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-vertical MuiButtonGroup-colorPrimary e1jymmfx0 css-1idgnfl-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
        role="group"
      >
        <button
          aria-label="Download"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconDownloadSmall"
                data-testid="IconDownloadSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Copy"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCopySmall"
                data-testid="IconCopySmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Cube"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconCubeSmall"
                data-testid="IconCubeSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Github"
          class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconGithubSmall"
                data-testid="IconGithubSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
        <button
          aria-label="Edit"
          class="MuiButtonBase-root Mui-disabled MuiButtonGroup-grouped MuiButtonGroup-groupedVertical MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedVertical MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconEditSmall"
                data-testid="IconEditSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ButtonGroup /> > IconOnly story renders snapshot 1`] = `
<div
  class="css-13iras6-StyledBackgroundAppearanceWrapper-StyledBackgroundAppearanceWrapper et5j5k0"
>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary e1jymmfx0 css-qr64dq-MuiButtonGroup-root-StyledButtonGroup-GeneralButtonGroupStyles-PrimaryButtonGroupStyles-LargeButtonGroupStyles-StyledButtonGroup"
    role="group"
  >
    <button
      aria-label="Download"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-firstButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconDownloadSmall"
            data-testid="IconDownloadSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      aria-label="Copy"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-middleButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconCopySmall"
            data-testid="IconCopySmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
    <button
      aria-label="Edit"
      class="MuiButtonBase-root MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 MuiButtonGroup-lastButton css-4u7llv-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconEditSmall"
            data-testid="IconEditSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
    </button>
  </div>
</div>
`;
